--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 </p>
                 <p>
                     Web sitem, ziyaretçilere interaktif bir deneyim sunmak amacıyla özel olarak geliştirilmiş animasyonlar ve geçiş efektleri
-                    içermektedirve bu site, benimle iletişim kurmak isteyen kişilere bir kapı aralamak için tasarlandı.
+                    içerir ve bu site, benimle iletişim kurmak isteyen kişilere bir kapı aralamak için tasarlanmıştır.
                 </p>
                 <a href="#" target="_blank">Detaylar</a>
             </div>
