--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     <h3 id="csharp"></h3>
                     <p id="description">
                     </p>
-                    <a href="https://github.com/0ZeKa0/veri-yapilari-algoritmalar" target="_blank" id="git"></a>
+                    <a href="https://github.com/0ZeKa0/veri-yapilari-algoritmalar" target="_blank" id="git2"></a>
                 </div>
             </div>
         </div>
