--- a/index.html
+++ b/index.html
@@ -81,13 +81,11 @@
             <div class="nestedcontainer">
                 <div class="yetenekler"onmouseover="changeColor(this)" onmouseout="resetColor(this)">
                     <ul class="skills-list">
+                        <li>Figma</li>
                         <li>HTML</li>
                         <li>CSS</li>
                         <li>JavaScript</li>
-                        <li>ASP .NET</li>
-                        <li>C</li>
                         <li>SQL</li>
-                        <li>Kotlin</li>
                     </ul>
                    
                 </div>
